[gd_scene load_steps=7 format=2]

[ext_resource path="res://players/Heres/HeresUI.gd" type="Script" id=1]
[ext_resource path="res://jsl-ancient/JANCIENT.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=8]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=10]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HeresUI" type="Control" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Skills" type="Control" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ItemList" type="ItemList" parent="Skills" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Skills/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 60
alignment = 1
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="single_target" type="Button" parent="Skills/ItemList/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Single Target"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AOE" type="Button" parent="Skills/ItemList/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 107.0
margin_right = 200.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "AOE"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DOT" type="Button" parent="Skills/ItemList/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 214.0
margin_right = 200.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "DOT"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="No_DP" type="Label" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 184.0
margin_right = 237.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
text = "No Destruction Points Remaining"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="no_dp_timer" type="Timer" parent="No_DP" index="0"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="pressed" from="Skills/ItemList/VBoxContainer/single_target" to="." method="_on_single_target_pressed"]

[connection signal="pressed" from="Skills/ItemList/VBoxContainer/AOE" to="." method="_on_AOE_pressed"]

[connection signal="pressed" from="Skills/ItemList/VBoxContainer/DOT" to="." method="_on_DOT_pressed"]

[connection signal="timeout" from="No_DP/no_dp_timer" to="." method="_on_no_dp_timer_timeout"]


